actualizando archivos de configuracion